Try to display background images on mobile devices correctly.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -124,7 +124,8 @@ header {
     position: relative;
     width: 100%;
     min-height: 100vh;
-    background-size: cover;
+    background-size: auto 100%;
+    /* background-size: cover; */
     background-attachment: fixed;
     background-image: url("https://raw.githubusercontent.com/enamarat/enamarat.github.io/master/public/rsz_img_0195.jpg");
   }
@@ -230,17 +231,6 @@ header {
     padding-left: 0.5rem;
   }
 
-  /*** Portfolio ***/
-  #portfolio-div {
-    /* background-position: center; */
-    background-image: url("https://raw.githubusercontent.com/enamarat/enamarat.github.io/master/public/rsz_img_0195-480.jpg");
-  }
-  /*** About me ***/
-  #about-div {
-    /* background-position: center; */
-    background-image: url("https://raw.githubusercontent.com/enamarat/enamarat.github.io/master/public/rsz_img_0190-480.jpg");
-  }
-
 }
 
 @media screen and (max-width: 768px) {
@@ -261,18 +251,18 @@ header {
   }
 
   /*** Portfolio ***/
-  #portfolio-div {
+  /* #portfolio-div {
     background-position: center;
-  }
+  } */
 
   .portfolio-item  {
     width: 50%;
   }
 
   /*** About me ***/
-  #about-div {
+  /* #about-div {
     background-position: center;
-  }
+  } */
 
 }
 
